# connectbyname

./: .gitignore  API-design.md  API-prototypes.md  ChangeLog  README.md  configure.ac
notes/: Makefile  dns-client-proxy.md  dns-client-proxy.txt  dns-client-proxy.xml  macos
proto1/: Makefile  README  connectbyname.c  connectbyname.h  get80.c
proto10/: Makefile  README  connectbyname.c
proto2/: Makefile  README  connectbyname.c
proto3/: Makefile  README  connectbyname.c  connectbyname.h  get80.c
proto4/: Makefile  README  connectbyname.c  connectbyname.h  get443.c
proto5/: Makefile  README  connectbyname.c  get443.c
proto6/: Makefile  README  connectbyname.c  connectbyname.h  get443.c
proto7/: Makefile  README  connectbyname.c  connectbyname.h  get443.c
proto8/: Makefile  README  config.doxygen  connectbyname.c  connectbyname.h  get443.c  getdns-interface
proto9/: Makefile  README  connectbyname.c  connectbyname.h  get443.c
src/: Makefile.am  cbn-client.c  cbn.c  connectbyname.c  connectbyname.h
